оформлення шапка/підвал

--- a/index.html
+++ b/index.html
@@ -5,32 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" 
+    rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!--Шапка сторінки-->
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href="./portfolio.html">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+    <header class="page-header">
+        <nav class="navigation">
+            <a class="logo link" href="./index.html">WebStudio</a>
+            <ul class="menu">
+                <li class="menu-item"><a class="menu-link link" href="">Студія</a></li>
+                <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Портфоліо</a></li>
+                <li class="menu-item"><a class="menu-link link" href="">Контакти</a></li>
             </ul>
         </nav>
         <ul>
             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111">+3 8 096 111 11 11</a>
+                <a class="contact-phone-number link" href="tel:+380961111111">+3 8 096 111 11 11</a>
             </li>
         </ul>
 
     </header>
     <main>
-        <section>
-            <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-            <button type="button">Замовити послугу</button>     
+        <section class="pic">
+            <h1 class="title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+            <button class="modal-open-btn" type="button">Замовити послугу</button>     
         </section>
         <section>
             <h2 hidden>Переваги</h2>
@@ -100,17 +105,17 @@
     </main>
     <!--Підвал Сторінки-->
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo link" href="./index.html">WebStudio</a>
         <address>
             <ul>
                 <li>
-                    <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a> 
+                    <a class="maps link" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a> 
                 </li>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111">+3 8 096 111 11 11</a>
+                    <a class="contact-phone-number link" href="tel:+380961111111">+3 8 096 111 11 11</a>
                 </li>
             </ul>
         </address>  
