--- a/index.html
+++ b/index.html
@@ -41,71 +41,71 @@
             <h2 hidden>Переваги</h2>
             <ul>
                 <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з 
+                    <h3 class="caption">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="lead">Ідейні міркування, і навіть початок повсякденної роботи з 
                         формування позиції.</p>
                 </li>
                 <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                    <p>Завдання організації, особливо рамки і місце 
+                    <h3 class="caption">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="lead">Завдання організації, особливо рамки і місце 
                        навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3>ПЛАНУВАННЯ</h3>
-                    <p>Так само консультація з широким активом 
+                    <h3 class="caption">ПЛАНУВАННЯ</h3>
+                    <p class="lead">Так само консультація з широким активом 
                         значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p>Значимість цих проблем настільки очевидна, 
+                    <h3 class="caption">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="lead">Значимість цих проблем настільки очевидна, 
                        що реалізація планових завдань.</p>
                 </li>
             </ul>
         </section>
         <section>   
-            <h2>Чим ми займаємося</h2>
+            <h2 class="subtitle">Чим ми займаємося</h2>
             <ul>
                 <li>
-                    <img src="./images/box-1.jpg" alt="Ноутбук" width="270" height="294">
+                    <img class="image picture" src="./images/box-1.jpg" alt="Ноутбук" width="270" height="294">
                 </li>
                 <li>
-                    <img src="./images/box-2.jpg" alt="Телефон" width="270" height="294">
+                    <img class="image picture" src="./images/box-2.jpg" alt="Телефон" width="270" height="294">
                 </li>
                 <li>
-                    <img src="./images/box-3.jpg" alt="Планшет" width="270" height="294"> 
+                    <img class="image picture" src="./images/box-3.jpg" alt="Планшет" width="270" height="294"> 
                 </li>
             </ul>
         </section>
-        <section>   
-            <h2>Наша команда</h2>
+        <section class="aside">   
+            <h2 class="subtitle">Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/team-1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-                    <h3>Ігор Дем'яненко</h3>
-                    <p>Product Designer</p>
+                    <img class="image picture" src="./images/team-1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+                    <h3 class="item">Ігор Дем'яненко</h3>
+                    <p class="items">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/team-2.jpg" alt="Ольга Рєпіна" width="270" height="260">
-                    <h3>Ольга Рєпіна</h3>
-                    <p>Frontend Developer</p>
+                    <img class="image picture" src="./images/team-2.jpg" alt="Ольга Рєпіна" width="270" height="260">
+                    <h3 class="item">Ольга Рєпіна</h3>
+                    <p class="items">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/team-3.jpg" alt="Ольга Рєпіна" width="270" height="260">
-                    <h3>Микола Тарасов</h3>
-                    <p>Marketing</p> 
+                    <img class="image picture" src="./images/team-3.jpg" alt="Ольга Рєпіна" width="270" height="260">
+                    <h3 class="item">Микола Тарасов</h3>
+                    <p class="items">Marketing</p> 
                 </li>
                 <li>
-                    <img src="./images/team-4.jpg" alt="Ольга Рєпіна" width="270" height="260">
-                    <h3>Михайло Єрмаков</h3>
-                    <p>UI Designer</p> 
+                    <img class="image picture" src="./images/team-4.jpg" alt="Ольга Рєпіна" width="270" height="260">
+                    <h3 class="item">Михайло Єрмаков</h3>
+                    <p class="items">UI Designer</p> 
                 </li>
             </ul>
 
         </section>
     </main>
     <!--Підвал Сторінки-->
-    <footer>
-        <a class="logo link" href="./index.html">WebStudio</a>
+    <footer class="footer-page">
+        <a class="logo link footer-logo " href="./index.html">WebStudio</a>
         <address>
             <ul>
                 <li>
