--- a/portfolio.html
+++ b/portfolio.html
@@ -35,69 +35,69 @@
         <section>
             <h2 hidden>Фільтр</h2>
             <ul>
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайти</button></li>
-                <li><button type="button">Додатки</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+                <li><button class="btn" type="button">Все</button></li>
+                <li><button class="btn" type="button">Веб-сайти</button></li>
+                <li><button class="btn" type="button">Додатки</button></li>
+                <li><button class="btn" type="button">Дизайн</button></li>
+                <li><button class="btn" type="button">Маркетинг</button></li>
             </ul>
          </section>
          <section>
             <h2 hidden>Приклади</h2>
             <ul>
-                <li>
-                    <img src="./images/img1.jpg" alt="Тегнокряк" width="370" height="294">
-                    <h3>Технокряк</h3>
-                    <p>Веб-сайт</p>
+                <li class="list">
+                    <img class="picture" src="./images/img1.jpg" alt="Тегнокряк" width="370" height="294">
+                    <h3 class="subject">Технокряк</h3>
+                    <p class="tagline">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                    <h3>Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
+                    <img class="picture" src="./images/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                    <h3 class="subject">Постер New Orlean vs Golden Star</h3>
+                    <p class="tagline">Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/img3.jpg" alt="Ресторан Seafood" width="370" height="294">
-                    <h3>Ресторан Seafood</h3>
-                    <p>Додаток</p>
+                    <img class="picture" src="./images/img3.jpg" alt="Ресторан Seafood" width="370" height="294">
+                    <h3 class="subject">Ресторан Seafood</h3>
+                    <p class="tagline">Додаток</p>
                 </li>
                 <li>
-                    <img src="./images/img4.jpg" alt="Проєкт Prime" width="370" height="294">
-                    <h3>Проєкт Prime</h3>
-                    <p>Маркетинг</p>
+                    <img class="picture" src="./images/img4.jpg" alt="Проєкт Prime" width="370" height="294">
+                    <h3 class="subject">Проєкт Prime</h3>
+                    <p class="tagline">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/img5.jpg" alt="Проєкт Boxes" width="370" height="294">
-                    <h3>Проєкт Boxes</h3>
-                    <p>Додаток</p>
+                    <img class="picture" src="./images/img5.jpg" alt="Проєкт Boxes" width="370" height="294">
+                    <h3 class="subject">Проєкт Boxes</h3>
+                    <p class="tagline">Додаток</p>
                 </li>
                 <li>
-                    <img src="./images/img6.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
+                    <img class="picture" src="./images/img6.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                    <h3 class="subject">Inspiration has no Borders</h3>
+                    <p class="tagline">Веб-сайт</p>
                 </li>
                 </li>
                 <li>
-                    <img src="./images/img7.jpg" alt="Видання Limited Edition" width="370" height="294">
-                    <h3>Видання Limited Edition</h3>
-                    <p>Дизайн</p> 
+                    <img class="picture" src="./images/img7.jpg" alt="Видання Limited Edition" width="370" height="294">
+                    <h3 class="subject">Видання Limited Edition</h3>
+                    <p class="tagline">Дизайн</p> 
                 </li>
                 <li>
-                    <img src="./images/img8.jpg" alt="Проект LAB" width="370" height="294">
-                    <h3>Проект LAB</h3>
-                    <p>Маркетинг</p>
+                    <img class="picture" src="./images/img8.jpg" alt="Проект LAB" width="370" height="294">
+                    <h3 class="subject">Проект LAB</h3>
+                    <p class="tagline">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/img9.jpg" alt="Growing Business" width="370" height="294">
-                    <h3>Growing Business</h3>
-                    <p>Додаток</p>
+                    <img class="picture" src="./images/img9.jpg" alt="Growing Business" width="370" height="294">
+                    <h3 class="subject">Growing Business</h3>
+                    <p class="tagline">Додаток</p>
                 </li>
         
             </ul>
          </section>
     </main>
     <!--Підвал Сторінки-->
-    <footer>
-        <a class="logo link" href="./index.html">WebStudio</a>
+    <footer class="footer-page">
+        <a class="logo link footer-logo" href="./index.html">WebStudio</a>
         <address>
             <ul>
                 <li>
