--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <!--Шапка сторінки-->
     <header class="page-header">
         <nav class="navigation">
-            <a class="logo link" href="./index.html">WebStudio</a>
+            <a class="logo link " href="./index.html"><span class="accent">Web</span>Studio</a>
             <ul class="menu">
-                <li class="menu-item"><a class="menu-link link" href="">Студія</a></li>
+                <li class="menu-item"><a class="menu-link link current" href="">Студія</a></li>
                 <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Портфоліо</a></li>
                 <li class="menu-item"><a class="menu-link link" href="">Контакти</a></li>
             </ul>
@@ -33,31 +33,31 @@
 
     </header>
     <main>
-        <section class="pic">
+        <section class="hero">
             <h1 class="title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
             <button class="modal-open-btn" type="button">Замовити послугу</button>     
         </section>
-        <section>
+        <section class="work">
             <h2 hidden>Переваги</h2>
             <ul>
                 <li>
-                    <h3 class="caption">УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p class="lead">Ідейні міркування, і навіть початок повсякденної роботи з 
+                    <h3 class="about-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="about-text">Ідейні міркування, і навіть початок повсякденної роботи з 
                         формування позиції.</p>
                 </li>
                 <li>
-                    <h3 class="caption">ПУНКТУАЛЬНІСТЬ</h3>
-                    <p class="lead">Завдання організації, особливо рамки і місце 
+                    <h3 class="about-title">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="about-text">Завдання організації, особливо рамки і місце 
                        навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3 class="caption">ПЛАНУВАННЯ</h3>
-                    <p class="lead">Так само консультація з широким активом 
+                    <h3 class="about-title">ПЛАНУВАННЯ</h3>
+                    <p class="about-text">Так само консультація з широким активом 
                         значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3 class="caption">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p class="lead">Значимість цих проблем настільки очевидна, 
+                    <h3 class="about-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="about-text">Значимість цих проблем настільки очевидна, 
                        що реалізація планових завдань.</p>
                 </li>
             </ul>
@@ -76,28 +76,28 @@
                 </li>
             </ul>
         </section>
-        <section class="aside">   
+        <section class="team">   
             <h2 class="subtitle">Наша команда</h2>
             <ul>
                 <li>
                     <img class="image picture" src="./images/team-1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-                    <h3 class="item">Ігор Дем'яненко</h3>
-                    <p class="items">Product Designer</p>
+                    <h3 class="team-name">Ігор Дем'яненко</h3>
+                    <p class="team-position">Product Designer</p>
                 </li>
                 <li>
                     <img class="image picture" src="./images/team-2.jpg" alt="Ольга Рєпіна" width="270" height="260">
-                    <h3 class="item">Ольга Рєпіна</h3>
-                    <p class="items">Frontend Developer</p>
+                    <h3 class="team-name">Ольга Рєпіна</h3>
+                    <p class="team-position">Frontend Developer</p>
                 </li>
                 <li>
                     <img class="image picture" src="./images/team-3.jpg" alt="Ольга Рєпіна" width="270" height="260">
-                    <h3 class="item">Микола Тарасов</h3>
-                    <p class="items">Marketing</p> 
+                    <h3 class="team-name">Микола Тарасов</h3>
+                    <p class="team-position">Marketing</p> 
                 </li>
                 <li>
                     <img class="image picture" src="./images/team-4.jpg" alt="Ольга Рєпіна" width="270" height="260">
-                    <h3 class="item">Михайло Єрмаков</h3>
-                    <p class="items">UI Designer</p> 
+                    <h3 class="team-name">Михайло Єрмаков</h3>
+                    <p class="team-position">UI Designer</p> 
                 </li>
             </ul>
 
@@ -105,8 +105,8 @@
     </main>
     <!--Підвал Сторінки-->
     <footer class="footer-page">
-        <a class="logo link footer-logo " href="./index.html">WebStudio</a>
-        <address>
+        <a class="logo link footer-logo " href="./index.html"><span class="accent">Web</span>Studio</a>
+        <address class="address">
             <ul>
                 <li>
                     <a class="maps link" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a> 
