--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                 <a class="logo link " href="./index.html"><span class="accent">Web</span>Studio</a>
             <ul>
                 <li class="menu-item"><a class="menu-link link" href="./index.html">Студія</a></li>
-                <li class="menu-item"><a class="menu-link link current" href=""">Портфоліо</a></li>
+                <li class="menu-item"><a class="menu-link link current" href="./portfolio.html"">Портфоліо</a></li>
                 <li class="menu-item"><a class="menu-link link" href="">Контакти</a></li>
             </ul>
         </nav>
@@ -98,7 +98,7 @@
     </main>
     <!--Підвал Сторінки-->
     <footer class="footer-page">
-        <a class="logo link footer-logo" href="./index.html"><span class="accentr">Web</span>Studio</a>
+        <a class="logo link footer-logo" href="./index.html"><span class="accent">Web</span>Studio</a>
         <address class="address">
             <ul>
                 <li>
