--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="navigation">
             <a class="logo link " href="./index.html"><span class="accent">Web</span>Studio</a>
             <ul class="menu">
-                <li class="menu-item"><a class="menu-link link current" href="">Студія</a></li>
+                <li class="menu-item"><a class="menu-link link current" href="./index.html">Студія</a></li>
                 <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Портфоліо</a></li>
                 <li class="menu-item"><a class="menu-link link" href="">Контакти</a></li>
             </ul>
