--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a class="contact-phone-number link" href="tel:+380961111111">+3 8 096 111 11 11</a>
+                <a class="contact-phone-number link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
 
@@ -63,7 +63,7 @@
             </ul>
         </section>
         <section>   
-            <h2 class="subtitle">Чим ми займаємося</h2>
+            <h2 class="section-title">Чим ми займаємося</h2>
             <ul>
                 <li>
                     <img class="image picture" src="./images/box-1.jpg" alt="Ноутбук" width="270" height="294">
@@ -77,7 +77,7 @@
             </ul>
         </section>
         <section class="team">   
-            <h2 class="subtitle">Наша команда</h2>
+            <h2 class="section-title">Наша команда</h2>
             <ul>
                 <li>
                     <img class="image picture" src="./images/team-1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
@@ -115,7 +115,7 @@
                     <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a class="contact-phone-number link" href="tel:+380961111111">+3 8 096 111 11 11</a>
+                    <a class="contact-phone-number link" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>  
