--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                 <a class="logo link " href="./index.html"><span class="accent">Web</span>Studio</a>
             <ul>
                 <li class="menu-item"><a class="menu-link link" href="./index.html">Студія</a></li>
-                <li class="menu-item"><a class="menu-link link current" href="./portfolio.html"">Портфоліо</a></li>
+                <li class="menu-item"><a class="menu-link link current" href="./portfolio.html">Портфоліо</a></li>
                 <li class="menu-item"><a class="menu-link link" href="">Контакти</a></li>
             </ul>
         </nav>
@@ -28,7 +28,7 @@
                 <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a class="contact-phone-number link" href="tel:+380961111111">+3 8 096 111 11 11</a>
+                <a class="contact-phone-number link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
@@ -108,7 +108,7 @@
                     <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a class="contact-phone-number link" href="tel:+380961111111">+3 8 096 111 11 11</a>
+                    <a class="contact-phone-number link" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
